<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movie"
        android:title="@string/movie"
        android:icon="@drawable/ic_baseline_movie_24"/>
    <item
        android:id="@+id/tvShow"
        android:title="@string/tv_show"
        android:icon="@drawable/ic_baseline_live_tv_24"/>
    <item
        android:id="@+id/favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_favorite_24"/>
</menu>